[project]
name = "aetherscan"
version = "0.1.0"
description = "Breakthrough Listen's first end-to-end production-grade DL pipeline for SETI @ scale"
authors = [
    { name = "Zach Yek", email = "xiaoxiyek1.5@gmail.com" }
]
dependencies = [
    # TODO: sync with environment.yml files
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }  # TODO: decide what license to use

[project.optional-dependencies]
dev = ["ruff"]  # Python linter

[tool.ruff]
# Configure linter
target-version = "py310"   # Target Python version
cache_dir = ".ruff_cache"  # Enable caching for faster runs
line-length = 100          # Set maximum line length

# Exclude directories from linting
exclude = [
    ".claude",
    ".git",
    ".ipynb_checkpoints",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "outputs",
]

[tool.ruff.lint]
# Enable specific linting rules
select = [
    "E",    # Standard PEP 8 formatting errors (indentation, whitespace, etc.)
    "W",    # Standard PEP 8 formatting warnings (indentation, whitespace, etc.)
    "F",    # Detects unused imports, variables, etc.
    "I",    # Checks import order consistency
    "N",    # Enforces naming conventions (functions_names vs FunctionNames, etc.)
    "UP",   # Suggests modern syntax upgrades (f-strings, type hints, etc.)
    "B",    # Find common bugs and design patterns
    "C4",   # Simplifies inefficient comprehensions (list, set, dict)
    "SIM",  # Simplifies control flow (if/else, return, etc.)
    "PL",   # Logical and stylistic checks
]

# Ignore specific linting rules
ignore = [
    "E501",     # Defer line wrapping to formatter
    "PLR0913",  # Allow functions with many params 
    "PLR2004",  # Ignore warnings for magic number comparisons
]

fixable = ["ALL"]  # Allow autofix for all enabled rules when possible
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
# Declare first-party imports (for sorting order)
known-first-party = [
    "db", 
    "models", 
    "utils",
]

[tool.ruff.format]
# Configure formatter
quote-style = "double"  # Use double quotes for strings
indent-style = "space"  # Indent with spaces
line-ending = "auto"    # Use system-default line endings
